--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,30 @@
-<h1>Lasagna Recipe</h1>
+<main>
+    <h1>Lasagna Recipe</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F07%2F11%2Fworlds-best-lasagna.jpeg" alt="lasagna dish" height="250px" width="250px">
+    <h2>Description</h2>
+    <p>This is a recipe for <em>yummy</em> lasagna. A great noodle, beef, and cheese dinner idea.</p>
+    <br>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>¾ pound lean ground beef</li> 
+        <li>½ cup minced onion </li>
+        <li>2 cloves garlic, crushed</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>2 (6.5 ounce) cans canned tomato sauce</li>
+        <li>½ cup water</li>
+        <li>2 tablespoons white sugar</li>
+        <li>1 ½ teaspoons dried basil leaves</li>
+        <li>½ teaspoon fennel seeds</li>
+        <li>1 teaspoon Italian seasoning</li>
+        <li>1 ½ teaspoons salt, divided, or to taste</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>4 tablespoons chopped fresh parsley</li>
+        <li>12 lasagna noodles</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>1 egg </li>
+        <li>¾ pound mozzarella cheese, sliced</li>
+        <li>¾ cup grated Parmesan cheese</li>
+    </ul>
+</main>
