Add index.html and ./recipes/meatballsand.html and ./recipes/pancakes.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/pancakes.html">Pancakes</a>
+        <br>
+        <a href="./recipes/meatballsand.html">Meatball Sandwich</a>
+        <br>
         <a href="./recipes/lasagna.html">Lasagna</a>
     </body>
 </html>
