--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -2,7 +2,7 @@
     <h1>Pancakes Recipe</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F05%2F07%2FGood-Old-Fashioned-Pancakes-2000.jpg" alt="Good Old-Fashioned Pancakes" height="250px" width="250px">
     <h2>Description</h2>
-    <p>This is a recipe for good <em>old-fashioned</em> pancakes. A way to start your morning.</p>
+    <p>This is a recipe for good <em>old-fashioned</em> pancakes. The best way to start your morning.</p>
     <br>
     <h3>Ingredients</h3>
         <ul>
